working on main page

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -33,3 +33,14 @@
 //   width: 80%;
 //   text-align: center;
 // }
+
+.wrapper-anim {
+  background: $border-color-01;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.post-content {
+  font-size: 20px;
+}
