--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: default-home
 ---
 <article class="post">
 
-  <header class="post-header">
+  <!-- <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+  </header> -->
 
   <div class="post-content">
     {{ content }}
