working on the main page

--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -11,3 +11,5 @@ $site-title-color: $header-color-light;
 $border-color-01: #000000;
 $border-color-02: #000000;
 $border-color-03: #000000;
+
+$spacing-unit: 30px 
