--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -43,4 +43,28 @@
 
 .post-content {
   font-size: 20px;
+
+  h1, h2, h3 { margin-top: $spacing-unit * 1 }
+  h4, h5, h6 { margin-top: $spacing-unit * 1}
+}
+
+.div-wanted {
+  background-color: rgb(220, 240, 250);
+  box-sizing: border-box;
+  border:2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: rgb(66, 110, 140);
+  font-weight: bold;
+  font-size: 26px;
+}
+
+.div-wanted-2 {
+  color: black;
+  font-weight: normal;
+  font-size: 20px;
 }
