floaring message - not a good option

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,24 @@ layout: default-home
 <article class="post">
 
   <div class="post-content">
-    {{ content }}
+    <div class="content-column-left">
+      {{ content }}
+    </div>
+    <div class="content-column-right">
+      <div class="div-wanted">
+        M.Sc./Ph.D./Postdoc students are wanted
+        
+        <div class="div-wanted-2">
+        We are continuously seeking highly motivated and talented students interested in 
+        joining our group to work on various multidisciplinary research projects
+        related to fluid dynamics.
+        <br><br>
+        For any further information please do not hesitate to contact Dr Anatoliy Khait at:
+        <!-- <a href = "mailto: anatoliyk@ariel.ac.il">anatoliyk@ariel.ac.il</a> -->
+        <a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>
+        </div>
+        </div>
+    </div>
   </div>
 
 </article>
