--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -49,16 +49,16 @@
 }
 
 .div-wanted {
-  background-color: rgb(220, 240, 250);
+  background-color: rgb(200, 235, 235);
   box-sizing: border-box;
-  border:2px solid black;
+  border:2px solid rgb(60, 130, 140);
   margin-top: 20px;
   margin-bottom: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
   padding-right: 20px;
-  color: rgb(66, 110, 140);
+  color: rgb(60, 130, 140);
   font-weight: bold;
   font-size: 26px;
 }
