--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -12,4 +12,8 @@ $border-color-01: #000000;
 $border-color-02: #000000;
 $border-color-03: #000000;
 
+$border-color-04: rgb(60, 130, 140);
+
+$background-color-ariel: rgb(200, 235, 235);
+
 $spacing-unit: 30px 
