need to work on cooperation

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -30,8 +30,8 @@
   </div>
 
   <div class="wrapper-anim">
-    <img src="img/anim_waves.gif" height="280px">
-    <img src="img/anim_vortex.gif" height="280px">
+    <img src="/anim/anim_waves.gif" height="280px">
+    <img src="/anim/anim_vortex.gif" height="280px">
   </div>
 
 </header>
