minor correction of header

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -30,8 +30,10 @@
   </div>
 
   <div class="wrapper-anim">
-    <img src="/anim/anim_waves.gif" height="280px">
-    <img src="/anim/anim_vortex.gif" height="280px">
+    <!-- <img src="/anim/anim_waves.gif" height="280px">
+    <img src="/anim/anim_vortex.gif" height="280px"> -->
+    <img src="/anim/anim_waves.gif" style="height:280px; max-width:45%; object-fit: scale-down">
+    <img src="/anim/anim_vortex.gif" style="height:280px; max-width:45%; object-fit: scale-down">
   </div>
 
 </header>
