--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,17 @@
       {%- endif %}
       </div>
       <div class="footer-col">
-        <p>{{ site.description }}</p>
+        <p>
+          {{ site.author.department }}
+          <br>
+          {{ site.author.faculty }}
+          <br>
+          {{ site.author.university }}
+          <br>
+          {{ site.author.address }}
+          <br>
+          <img src="/logo/Ariel_logo.png" alt="Test image" width="200px" align="right">
+        </p>
       </div>
     </div>
 
