--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -32,8 +32,8 @@
   <div class="wrapper-anim">
     <!-- <img src="/anim/anim_waves.gif" height="280px">
     <img src="/anim/anim_vortex.gif" height="280px"> -->
-    <img src="/anim/anim_waves.gif" style="height:280px; max-width:45%; object-fit: scale-down">
-    <img src="/anim/anim_vortex.gif" style="height:280px; max-width:45%; object-fit: scale-down">
+    <img src="/anim/anim_waves.gif" style="max-height:280px; max-width:45%; object-fit: contain">
+    <img src="/anim/anim_vortex.gif" style="max-height:280px; max-width:45%; object-fit: contain">
   </div>
 
 </header>
